--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="item">
                 <div class="item-layer">
                     <div class="item-image">
-                        <img src="image/FriedChicken.jpg" alt="">
+                        <img src="image/fried-chicken.jpg" alt="">
                         <i class="fa-solid fa-heart fa-xl"></i>
                     </div>
                     <div class="item-data">
